tests/spec/parse/snapshots/precedence_unary_binary.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() { let result = !a && b; }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "result",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 17,
                                    byte_length: 6,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Binary {
                            operator: And,
                            left: Unary {
                                operator: Not,
                                expression: Identifier {
                                    value: "a",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 27,
                                        byte_length: 1,
                                    },
                                    resolution: Unresolved,
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 26,
                                    byte_length: 2,
                                },
                            },
                            right: Identifier {
                                value: "b",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 32,
                                    byte_length: 1,
                                },
                                resolution: Unresolved,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 26,
                                byte_length: 7,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 13,
                            byte_length: 20,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 25,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 35,
        },
    },
]
