tests/spec/parse/snapshots/propagate_simple.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(res: Result<int, string>) {
    let value = res?;
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "res",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 3,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Result",
                        params: [
                            Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 21,
                                    byte_length: 3,
                                },
                            },
                            Constructor {
                                name: "string",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 26,
                                    byte_length: 6,
                                },
                            },
                        ],
                        span: Span {
                            file_id: 0,
                            byte_offset: 14,
                            byte_length: 19,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "value",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 43,
                                    byte_length: 5,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Propagate {
                            expression: Identifier {
                                value: "res",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 51,
                                    byte_length: 3,
                                },
                                resolution: Unresolved,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 51,
                                byte_length: 4,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 39,
                            byte_length: 16,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 35,
                    byte_length: 23,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 57,
        },
    },
]
