tests/spec/parse/snapshots/pub_const.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  pub const MAX: int = 100;
---
[
    Const {
        doc: None,
        identifier: "MAX",
        identifier_span: Span {
            file_id: 0,
            byte_offset: 11,
            byte_length: 3,
        },
        annotation: Some(
            Constructor {
                name: "int",
                params: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 16,
                    byte_length: 3,
                },
            },
        ),
        expression: Value(
            Literal {
                literal: Integer {
                    value: 100,
                    text: None,
                },
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 22,
                    byte_length: 3,
                },
            },
        ),
        visibility: Public,
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 5,
            byte_length: 20,
        },
    },
]
