tests/spec/parse/snapshots/pub_function.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  pub fn greet() { }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "greet",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 5,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Public,
        body: Definition(
            Block {
                items: [],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 16,
                    byte_length: 3,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 5,
            byte_length: 14,
        },
    },
]
